<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff00918f"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_margin_fragment" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/result_configuration"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/result_bg_transparent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10.0" >

            <TextView
                android:id="@+id/result_name_textScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 
                android:gravity="left"
                android:paddingLeft="40.0dip"
                android:text="@string/result_socre"
                android:textColor="@android:color/white"
                android:textSize="20.0dip" />

            <TextView
                android:id="@+id/result_textScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="40.0dip"
                android:textStyle="bold" 
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_marginTop="-10.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10.0" >

            <TextView
                android:id="@+id/result_name_textBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="40.0dip"
                android:text="@string/result_best"
                android:textColor="@android:color/white"
                android:textSize="20.0dip" />

            <TextView
                android:id="@+id/result_textBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="40.0dip"
                android:textStyle="bold"
                android:layout_marginLeft="30dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/result_button_rate"
            android:layout_width="@dimen/result_width_bt"
            android:layout_height="60.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="30.0dip"
            android:textColor="@color/btn_text_color"
            android:text="@string/rate"
            android:background="@drawable/background_button" 
            android:textSize="30.0sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/result_button_share"
            android:layout_width="@dimen/result_width_bt"
            android:layout_height="60.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="30.0dip"
            android:textColor="@color/btn_text_color"
            android:text="@string/share"
            android:background="@drawable/background_button" 
            android:textSize="30.0sp"
            android:textStyle="bold"  />
        
    </LinearLayout><Button
        android:id="@+id/result_button_try_again"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/background_button"
        android:text="@string/play"
        android:textColor="@color/btn_text_color"
        android:textSize="30.0sp"
        android:textStyle="bold" />

</LinearLayout>