<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff00918f"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/top_bar">

        <ImageView
            android:id="@+id/img_rateapp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="bottom|left|center"
            android:src="@drawable/ic_rating"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/img_moreapp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="20.0"
            android:gravity="bottom|center"
            android:src="@drawable/ic_get_pro"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/imageViewMediaMenu"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sound" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/top_bar">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home_icon"
        android:contentDescription="@string/app_name" 
        />

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" 
        android:padding="10.0dip"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4.0dip"
            android:layout_weight="1.0"
            android:background="@color/layout_main"
            android:orientation="horizontal"
            android:paddingBottom="0.0dip"
            android:paddingLeft="0.0dip"
            android:paddingRight="0.0dip"
            android:paddingTop="12.0dip" >

            <Button
                android:id="@+id/button_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/play"
                android:textColor="@color/btn_text_color"
                android:textSize="32.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4.0dip"
            android:layout_weight="1.0"
            android:background="@color/layout_main"
            android:orientation="horizontal"
            android:paddingBottom="0.0dip"
            android:paddingLeft="0.0dip"
            android:paddingRight="0.0dip"
            android:paddingTop="12.0dip" >

            <Button
                android:id="@+id/button_try"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/tut"
                android:textColor="@color/btn_text_color"
                android:textSize="32.0sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

     </LinearLayout>
     
     
         <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_publisher_id"
        android:layout_alignParentBottom="true"/>  
        

</RelativeLayout>